2004-12-31  Karl Berry  <karl@gnu.org>

	* Version 4.8.

2004-12-21  Karl Berry  <karl@gnu.org>

	* pretest version 4.7.94.

	* makeinfo/xref.c: doc fix.

2004-12-20  Karl Berry  <karl@gnu.org>

	* makeinfo/html.c (cm_node) <html>: need old-style names in the normal
	(not no_headers) html case, too, of course.
	(add_html_names): canon_white the new name, too.

2004-12-19  Karl Berry  <karl@gnu.org>

	* pretest version 4.7.93.

	* automake 1.9.4.

	* makeinfo/xml.c (try_docbook_image): new fn.
	(xml_insert_docbook_image): call it, trying additional formats
	pdf, svg, etc.
	* makeinfo/makeinfo.c (cm_image): check for gif too.
	http://www.gnu.org/philosophy/gif.html says:
	"we can and will include support for displaying GIF files in GNU
	 software."  Leaving it undocumented, though.
	Based on patch from Jens Elkner, 18 Dec 2004 01:56:28 +0100.

2004-12-19  Torsten Bronger  <bronger@physik.rwth-aachen.de>

	* util/texinfo.dtd: define most entities, add <neos>.

2004-12-17  Juan M. Guerrero  <st001906@hrz1.hrz.tu-darmstadt.de>

	* djgpp/config.bat: remove files like coXXXXXX.tmp created
	in the top_srcdir by the gl_FUNC_MKSTEMP test.

2004-12-15  Karl Berry  <karl@gnu.org>

	* pretest version 4.7.92.

	* util/texinfo.dtd: merge with makeinfo/texinfo.dtd.
	* makeinfo/texinfo.dtd, makeinfo/texinfo.xsl: remove.

2004-12-15  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (EXTRA_DIST): Removed po/Makevars.template, sorry.

2004-12-15  Juan M. Guerrero  <st001906@hrz1.hrz.tu-darmstadt.de>

	* djgpp/config.sed: adjust for new autoconf.
	* makeinfo/node.c (enumerate_filename): make dos_file_names const
	instead of static, since it may involve a fn call to pathconf.

2004-12-15  Karl Berry  <karl@gnu.org>

	* Makefile.am (EXTRA_DIST): include ChangeLog.46, README.dev,
	and po/Makevars.template.  From Stepan.

2004-12-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (inforef): try to explain possible uses more
	thoroughly.
	From: Luc Teirlinck, 13 Dec 2004 21:45:58 -0600.
