@@ -1,3 +1,10 @@
+2005-01-11  Karl Berry  <karl@gnu.org>
+
+	* util/gendocs.sh: eval $cmd instead of just $cmd, so allow for
+		embedded quotes.
+	From: Sergey Poznyakoff <gray@Mirddin.farlep.net>,
+	11 Jan 2005 16:16:32 +0200.
+
 2004-12-31  Karl Berry  <karl@gnu.org>
 
 	* Version 4.8.
